make sure SearchSpliterator obeys ORDERED correctly, and remove redundant lists used to construct SearchSpliterator